# wavlm-vocoder-french

./: .gitignore  LICENSE  README.md  pyproject.toml  results_FINAL.csv  results_ablation_N1to6.csv
configs/: base.yaml
configs/experiments/: ablation_layers.yaml  gan.yaml  no_gan.yaml
paper_assets/: layer_importance_table.tex
paper_assets/figures/: table_ablation.tex
scripts/: analyze_ablation_results.py  eval.py  infer.py  run_ablation.py  train.py
src/data/: collate.py  dataset.py
src/losses/: combined.py  gan.py  reconstruction.py
src/models/: adapter.py  discriminator.py  generator.py  wavlm_vocoder.py
src/trainers/: trainer.py
src/utils/: audio.py  audio_processing.py  checkpoint.py  config.py  logging.py
tests/: test_dataset.py  test_losses.py  test_models.py  test_training.py
